One last thing to fix, alignment

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -28,6 +28,25 @@ p {
     text-shadow: 2px 2px 4px #000000;
 }
 
+legend {
+    font-style: italic;
+    margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: left;
+    font-size: 20px;
+    max-width: 30vw;
+    text-shadow: 2px 2px 4px #000000;
+}
+
+input {
+    justify-self: right;
+}
+
+label {
+    text-align: left;
+}
+
 /* settings for the firs header of the document */
 h1 { 
     margin-top: 0;
@@ -226,7 +245,7 @@ main > form {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.arvr-video {
+video {
     margin-top: 2vh;
     width: 560px; 
     height: 315px;
@@ -308,7 +327,18 @@ main > form {
         background-color: #5b6677;
         border: 1px black solid;
         background: gray;    
+
     }
+
+.forum-align {
+    display: grid;
+    grid-template-columns: 30% auto;
+    grid-template-rows: auto auto;
+    grid-template-areas: 
+        ". ."
+        ". .";
+}
+
 
 /* === === === === === === === === */
 /* === === ==Link rules=== === === */
